<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pexelsbatagov296445141"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="152dp"
            android:layout_height="175dp"
            android:layout_marginStart="130dp"
            android:layout_marginEnd="130dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.001"
            app:srcCompat="@drawable/trippygo1" />

        <Button
            android:id="@+id/button1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/ic_launcher_background"
            android:text="@string/next"
            android:textColor="@color/black"
            android:textColorLink="@color/black"
            app:cornerRadius="20px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="93dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/inria_sans_bold_italic"
            android:text="@string/smart_itinerary"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="367dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/inter"
            android:text="@string/ai_features"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/button1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/skip"
            android:textColor="@color/ic_launcher_background"
            android:gravity="center_vertical"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/button1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>