<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".profile">

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/profileImageCard"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="60dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView45">

        <ImageView
            android:id="@+id/imageView24"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ima" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/usernameLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/username_label"
        android:textColor="@color/Grey_1"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImageCard" />

    <androidx.cardview.widget.CardView
        android:id="@+id/usernameCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="#F5F5F5"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameLbl">

        <TextView
            android:id="@+id/usernameValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:padding="12dp"
            android:text="Lahirujay00"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/emailLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/email_label"
        android:textColor="@color/Grey_1"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameCard" />

    <androidx.cardview.widget.CardView
        android:id="@+id/emailCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="#F5F5F5"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLbl">

        <TextView
            android:id="@+id/emailValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:padding="12dp"
            android:text="@string/user_email"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/phoneLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/phone_number_label"
        android:textColor="@color/Grey_1"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailCard" />

    <androidx.cardview.widget.CardView
        android:id="@+id/phoneCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="#F5F5F5"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneLbl">

        <TextView
            android:id="@+id/phoneValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:padding="12dp"
            android:text="@string/user_phone"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/genderLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/gender_label"
        android:textColor="@color/Grey_1"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneCard" />

    <androidx.cardview.widget.CardView
        android:id="@+id/genderCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="#F5F5F5"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderLbl">

        <TextView
            android:id="@+id/genderValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:padding="12dp"
            android:text="@string/user_gender"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/editProfileBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#F0F0F0"
        android:fontFamily="@font/inter_medium"
        android:text="Edit Profile"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderCard" />

    <Button
        android:id="@+id/signOutBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/ic_launcher_background"
        android:fontFamily="@font/inter_medium"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileBtn" />

    <View
        android:id="@+id/view7"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:background="@drawable/upper_rounded_taskbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/bottomNavContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:contentDescription="Home"
            app:srcCompat="@drawable/hhmo" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:contentDescription="Trips"
            app:srcCompat="@drawable/tripss" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:contentDescription="Saves"
            app:srcCompat="@drawable/savess" />

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:backgroundTint="@color/ic_launcher_background"
            android:contentDescription="Profile"
            android:tint="@color/ic_launcher_background"
            app:srcCompat="@drawable/profilee" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>